tests/NormalTests/paczka1/fuzzy1/62247323.err
Error in line 3: hIvgf7wo S964 57,8
Error in line 7: hIvgf7wo S52 95,5
Error in line 17: hIvgf7wo S964 39,0
Error in line 24: r5HMNWodCxP A941 3,1
Error in line 22: hIvgf7wo S550 36,4
Error in line 26: mMthrDZo S52 1,6
Error in line 32: uBb4RZ S550 12,1
